# lib_dzne_sqlite

./: README.md  README.rst  pyproject.toml
src/lib_dzne_sqlite/: Where.py  cmd.py  exec.py  fmt.py
